API: Install app domain SSL from Letsencrypt
